✨ feat (App Frontend): Many different Imrpovements branch: frontend

--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="stylesheet" href="%sveltekit.assets%/fontawesome/css/fontawesome.min.css" />
+		<link rel="stylesheet" href="%sveltekit.assets%/fontawesome/css/solid.min.css" />
+		<link rel="stylesheet" href="%sveltekit.assets%/fontawesome/css/duotone.min.css" />
+		<link rel="stylesheet" href="%sveltekit.assets%/fontawesome/css/brands.min.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
