✨ feat (MUNify): working houdini instance branch: refresh-setup

--- a/old/dashboard/index.html
+++ b/old/dashboard/index.html
@@ -110,7 +110,7 @@
 					</div>
 					<!-- /dropdown -->
 					<!-- dropdown -->
-					<div class="dropdown-end dropdown z-10">
+					<div class="dropdown dropdown-end z-10">
 						<div tabindex="0" class="avatar btn btn-circle btn-ghost">
 							<div class="w-10 rounded-full">
 								<img src="https://picsum.photos/80/80?5" />
@@ -527,7 +527,7 @@
 							</div>
 							<div class="join justify-self-end bg-base-100">
 								<button class="btn btn-ghost join-item btn-xs">–</button>
-								<input class="input join-item input-ghost input-xs w-10 text-center" value="1" />
+								<input class="input input-xs join-item input-ghost w-10 text-center" value="1" />
 								<button class="btn btn-ghost join-item btn-xs">+</button>
 							</div>
 						</li>
@@ -546,7 +546,7 @@
 							</div>
 							<div class="join justify-self-end bg-base-100">
 								<button class="btn btn-ghost join-item btn-xs">–</button>
-								<input class="input join-item input-ghost input-xs w-10 text-center" value="1" />
+								<input class="input input-xs join-item input-ghost w-10 text-center" value="1" />
 								<button class="btn btn-ghost join-item btn-xs">+</button>
 							</div>
 						</li>
@@ -565,7 +565,7 @@
 							</div>
 							<div class="join justify-self-end bg-base-100">
 								<button class="btn btn-ghost join-item btn-xs">–</button>
-								<input class="input join-item input-ghost input-xs w-10 text-center" value="1" />
+								<input class="input input-xs join-item input-ghost w-10 text-center" value="1" />
 								<button class="btn btn-ghost join-item btn-xs">+</button>
 							</div>
 						</li>
