--- a/src/app.html
+++ b/src/app.html
@@ -3,10 +3,22 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link rel="stylesheet" href="https://dmuncdnstorage.blob.core.windows.net/cdn/fontawesome-pro-6.7.2/css/fontawesome.min.css" />
-		<link rel="stylesheet" href="https://dmuncdnstorage.blob.core.windows.net/cdn/fontawesome-pro-6.7.2/css/solid.min.css" />
-		<link rel="stylesheet" href="https://dmuncdnstorage.blob.core.windows.net/cdn/fontawesome-pro-6.7.2/css/duotone.min.css" />
-		<link rel="stylesheet" href="https://dmuncdnstorage.blob.core.windows.net/cdn/fontawesome-pro-6.7.2/css/brands.min.css" />
+		<link
+			rel="stylesheet"
+			href="https://dmuncdnstorage.blob.core.windows.net/cdn/fontawesome-pro-6.7.2/css/fontawesome.min.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://dmuncdnstorage.blob.core.windows.net/cdn/fontawesome-pro-6.7.2/css/solid.min.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://dmuncdnstorage.blob.core.windows.net/cdn/fontawesome-pro-6.7.2/css/duotone.min.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://dmuncdnstorage.blob.core.windows.net/cdn/fontawesome-pro-6.7.2/css/brands.min.css"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
