🐞 fix: rename mutation for head delegate and update badge icon

--- a/src/app.html
+++ b/src/app.html
@@ -7,10 +7,7 @@
 			rel="stylesheet"
 			href="https://cdn.dmun.de/cdn/fontawesome-pro-6.7.2/css/fontawesome.min.css"
 		/>
-		<link
-			rel="stylesheet"
-			href="https://cdn.dmun.de/cdn/fontawesome-pro-6.7.2/css/solid.min.css"
-		/>
+		<link rel="stylesheet" href="https://cdn.dmun.de/cdn/fontawesome-pro-6.7.2/css/solid.min.css" />
 		<link
 			rel="stylesheet"
 			href="https://cdn.dmun.de/cdn/fontawesome-pro-6.7.2/css/duotone.min.css"
